make sure user level is the same as subject level before notification

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,10 @@ services:
     volumes:
       - .:/app
 
+  weeb-redis:
+    image: redis:latest
+    container_name: weeb-redis
+
 volumes:
   db-data:
     driver: local
