warn user 1 hour before the end of the day if they have remaining reviews

--- a/config/config.json.example
+++ b/config/config.json.example
@@ -5,5 +5,11 @@
         "user": "eris",
         "password": "password",
         "database": "accountability"
-    }
+    },
+    "redis": {
+        "host": "weeb-redis",
+        "port": 6379
+    },
+    "channel_id": "",
+    "pending_review_disappointed_threshold": 25
 }
