--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -42,6 +42,6 @@ jobs:
         with:
           context: "{{defaultContext}}"
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: snowsailor/test:latest
           labels: ${{ steps.meta.outputs.labels }}
 
