--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,13 @@ services:
     env_file:
       - ./config/.env.postgres
     volumes:
-      - db-data:/var/lib/postgresql/data/
+      - ./db:/var/lib/postgresql/data/
     restart: unless-stopped
 
   weeb-app:
     build:
       context: .
       dockerfile: Dockerfile
-    image: snowsailor/test:latest
     container_name: weeb-app
     restart: unless-stopped
     depends_on:
@@ -26,7 +25,3 @@ services:
   weeb-redis:
     image: redis:latest
     container_name: weeb-redis
-
-volumes:
-  db-data:
-    driver: local
