--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Create .env.postgres file in the config folder
         run: touch config/.env.postgres
       - name: Build the Docker image
-        run: docker-compose build --no-cache --force-rm weeb-app
+        run: docker compose build --no-cache --force-rm weeb-app
   test:
     runs-on: ubuntu-latest
     # if: github.repository == 'SnowySailor/Accountability'
